できてきた

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta charset="utf-8">
+  <title></title>
+
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="viewport" content="width=device-width">
+
+  <meta property="og:title" content="" />
+  <meta property="og:description" content="" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="" />
+  <meta property="og:image" content="" />
+  <meta property="og:site_name" content="" />
+
+  <meta property="fb:app_id" content="" />
+  <meta property="article:publisher" content="" />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="">
+  <link rel="author" href="https://plus.google.com/[your google plus id]" />
+
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="canonical" href="" />
+
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+
+</head>
+<body>
+  <div id="logo">
+      <img src="/images/hitode909.png" class="user-icon blink-a">
+      <img src="/images/yulily100.gif" class="user-icon blink-b">
+      <h1>
+        <span class="title title-blink-a">
+          行ったり来たり
+        </span>
+        <span class="title title-blink-b">
+          東海道
+        </span>
+      </h1>
+  </div>
+  <div id="about">
+    <h2>ABOUT US</h2>
+    <p>
+      行ったり来たり東海道は、
+      <a href="https://twitter.com/hitode909" target="_blank">hitode909</a>
+      と
+      <a href="https://twitter.com/yulily100" target="_blank">yulily100</a>
+      のユニット。
+      <br/>
+      「生活を豊かにする金」がモットー。今後の活動に期待。
+    </p>
+  </div>
+  <div id="productis">
+    <h2>PRODUCTS</h2>
+    <ul>
+      <li>COMING SOON</li>
+    </ul>
+  </div>
+</body>
+</html>
