--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <div id="logo">
       <img src="/images/hitode909.png" class="user-icon blink-a">
-      <img src="/images/yulily100.gif" class="user-icon blink-b">
+      <img src="/images/yulily100.png" class="user-icon blink-b">
       <h1>
         <span class="title title-blink-a">
           行ったり来たり
