ボタン置いた

--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width">
 
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="行ったり来たり東海道" />
+    <meta property="og:description" content="行ったり来たり東海道は、hitode909とyulily100のユニット。活動している。" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:site_name" content="" />
-
-    <meta property="fb:app_id" content="" />
-    <meta property="article:publisher" content="" />
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="">
-    <link rel="author" href="https://plus.google.com/[your google plus id]" />
+    <meta property="og:url" content="http://ittarikitaritoukaidou.github.io/" />
+    <meta property="og:image" content="http://ittarikitaritoukaidou.github.io/images/ogp.png" />
+    <meta property="og:site_name" content="行ったり来たり東海道" />
 
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="canonical" href="" />
+    <link rel="canonical" href="http://ittarikitaritoukaidou.github.io/" />
 
     <!--[if lt IE 9]>
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -41,7 +35,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
     <div id="container">
-      <div id="logo">
+      <header id="logo">
         <img src="/images/hitode909.png" class="user-icon blink-a">
         <img src="/images/yulily100.png" class="user-icon blink-b">
         <h1>
@@ -52,30 +46,26 @@
             東海道
           </span>
         </h1>
-      </div>
-      <div id="about">
-        <h2>ABOUT US</h2>
+      </header>
+      <section id="about">
+        <h1>ABOUT US</h1>
         <p>
-          行ったり来たり東海道は、
-          <a href="https://twitter.com/hitode909" target="_blank"><img src="/images/hitode909.png" style="width: 24px; vertical-align: middle;">hitode909</a>
-          と
-          <a href="https://twitter.com/yulily100" target="_blank"><img src="/images/yulily100.png" style="width: 24px; vertical-align: middle;">yulily100</a>
-          のユニット。
+          行ったり来たり東海道は、<a href="https://twitter.com/hitode909" target="_blank"><img src="/images/hitode909.png" style="width: 24px; vertical-align: middle;">hitode909</a>と<a href="https://twitter.com/yulily100" target="_blank"><img src="/images/yulily100.png" style="width: 24px; vertical-align: middle;">yulily100</a>のユニット。
           <br/>
-          活動している。
+          主に、活動している。
         </p>
-      </div>
+      </section>
 
-      <div id="productis">
-        <h2>PRODUCTS</h2>
-        <h3><a href="https://tabinootomo.herokuapp.com/">旅のお供</a></h3>
+      <section id="productis">
+        <h1>PRODUCTS</h1>
+        <h2><a href="https://tabinootomo.herokuapp.com/">旅のお供</a></h2>
         <p>
           旅のしおりを作れるサービス<br>
           <a href="https://tabinootomo.herokuapp.com/">https://tabinootomo.herokuapp.com/</a>
         </p>
-      </div>
+      </section>
 
-      <div id="buttons">
+      <footer id="buttons">
         <div class="button">
           <div class="fb-share-button" data-href="http://ittarikitaritoukaidou.github.io/" data-layout="box_count"></div>
         </div>
@@ -89,7 +79,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
 
-      </div>
+      </footer>
     </div>
 
   </body>
